--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Run Django tests
       run: |
         python3 set_example_env.py
-        pip install -r requirements.txt
+        pip3 install -r requirements.txt
         python3 manage.py test
 
   build:
