--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v1
-    - name: Deploy to permkrovlya.ru
+    - name: Deploy to foodate.ru
       run: |
         docker login -u gitlab-ci-token -p ${{ secrets.GITLAB_TOKEN }} ${{ secrets.GITLAB_URL }}
         docker pull ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
