--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,6 @@ services:
     image: nouchka/sqlite3:latest
     volumes:
       - ./db.sqlite3:/code/db.sqlite3
-      - ./static/uploads:/code/static/uploads
+      - ./static/uploads:/code/uploads
     environment:
       - SQLITE3_DB=/code/db.sqlite3
