--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,4 +42,4 @@ jobs:
         docker login -u gitlab-ci-token -p ${{ secrets.GITLAB_TOKEN }} ${{ secrets.GITLAB_URL }}
         docker pull ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
         docker rm -f foodate || true
-        docker run -d -p 445:445 --name foodate --env DEBUG=False --env SECRET_KEY='${{ secrets.DJANGO_SECRET_KEY }}' --env EMAIL_HOST_USER=${{ secrets.EMAIL_HOST_USER }} --env EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }} -v /home/vasil1y/apps/foodate/db.sqlite3:/code/db.sqlite3 -v /home/vasil1y/apps/foodate/uploads:/code/uploads ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
+        docker run -d -p 445:445 --name foodate --env DEBUG=${{ secrets.DEBUG }} --env SECRET_KEY='${{ secrets.DJANGO_SECRET_KEY }}' --env EMAIL_HOST_USER=${{ secrets.EMAIL_HOST_USER }} --env EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }} -v /home/vasil1y/apps/foodate/db.sqlite3:/code/db.sqlite3 -v /home/vasil1y/apps/foodate/uploads:/code/uploads ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
