--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI/CD
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "master", "develop" ]
   pull_request:
     branches: [ "develop" ]
 
@@ -29,17 +29,32 @@ jobs:
         docker build . --file Dockerfile --tag ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
         docker push ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
 
-  deploy:
-    needs: [test, build]
+  dev_deploy:
+    needs: [ test, build ]
     runs-on: self-hosted
     environment:
       name: development
+      url: https://dev.foodate.ru
+    steps:
+      - uses: actions/checkout@v1
+      - name: Deploy to dev.foodate.ru
+        run: |
+          docker login -u gitlab-ci-token -p ${{ secrets.GITLAB_TOKEN }} ${{ secrets.GITLAB_URL }}
+          docker pull ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
+          docker rm -f dev.foodate || true
+          docker run -d -p 446:446 --name dev.foodate --env DEBUG=${{ secrets.DEBUG }} --env SECRET_KEY='${{ secrets.DJANGO_SECRET_KEY }}' --env HOST=${{ secrets.HOST}} --env SCHEME=${{ secrets.SCHEME}} --env EMAIL_HOST_USER=${{ secrets.EMAIL_HOST_USER }} --env EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }} -v /home/vasil1y/apps/dev_foodate/db.sqlite3:/code/db.sqlite3 -v /home/vasil1y/apps/dev_foodate/uploads:/code/uploads ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
+
+  deploy:
+    needs: [ test, build ]
+    runs-on: self-hosted
+    environment:
+      name: production
       url: https://foodate.ru
     steps:
-    - uses: actions/checkout@v1
-    - name: Deploy to foodate.ru
-      run: |
-        docker login -u gitlab-ci-token -p ${{ secrets.GITLAB_TOKEN }} ${{ secrets.GITLAB_URL }}
-        docker pull ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
-        docker rm -f foodate || true
-        docker run -d -p 445:445 --name foodate --env DEBUG=${{ secrets.DEBUG }} --env SECRET_KEY='${{ secrets.DJANGO_SECRET_KEY }}' --env EMAIL_HOST_USER=${{ secrets.EMAIL_HOST_USER }} --env EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }} -v /home/vasil1y/apps/foodate/db.sqlite3:/code/db.sqlite3 -v /home/vasil1y/apps/foodate/uploads:/code/uploads ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
+      - uses: actions/checkout@v1
+      - name: Deploy to foodate.ru
+        run: |
+          docker login -u gitlab-ci-token -p ${{ secrets.GITLAB_TOKEN }} ${{ secrets.GITLAB_URL }}
+          docker pull ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
+          docker rm -f foodate || true
+          docker run -d -p 445:445 --name dev.foodate --env DEBUG=${{ secrets.DEBUG }} --env SECRET_KEY='${{ secrets.DJANGO_SECRET_KEY }}' --env HOST=${{ secrets.HOST}} --env SCHEME=${{ secrets.SCHEME}} --env EMAIL_HOST_USER=${{ secrets.EMAIL_HOST_USER }} --env EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }} -v /home/vasil1y/apps/foodate/db.sqlite3:/code/db.sqlite3 -v /home/vasil1y/apps/foodate/uploads:/code/uploads ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
