--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -9,4 +9,4 @@ COPY . /code
 
 EXPOSE 445
 
-CMD python manage.py migrate && python manage.py collectstatic && python manage.py runserver 0.0.0.0:445 --insecure
+CMD python manage.py migrate && python manage.py collectstatic && echo "yes" && python manage.py runserver 0.0.0.0:445 --insecure
