--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,9 +48,9 @@ jobs:
           --env SECRET_KEY='${{ secrets.DJANGO_SECRET_KEY }}' \
           --env HOST=${{ secrets.HOST }} \
           --env SCHEME=${{ secrets.SCHEME }} \
-          --env STATIC_ROOT=${{ secrets.STATIC_ROOT }} \
-          --env MEDIA_ROOT=${{ secrets.MEDIA_ROOT }} \
           --env EMAIL_HOST_USER=${{ secrets.EMAIL_HOST_USER }} \
           --env EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }} \
           -v ${{ secrets.DB_ROOT }}:/code/db.sqlite3 \
+          -v ${{ secrets.STATIC_ROOT }}:/code/www/static \
+          -v ${{ secrets.MEDIA_ROOT }}:/code/www/uploads \
           ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
