--- a/dev.foodate.conf
+++ b/dev.foodate.conf
@@ -10,10 +10,12 @@ server {
    }
 
    location /static/ {
-      alias /code/www/static/;
+       autoindex on;
+       alias /code/www/static/;
    }
 
    location /uploads/ {
+       autoindex on;
        alias /code/www/uploads/;
    }
 }
