--- a/.github/workflows/docker-image.production.yml
+++ b/.github/workflows/docker-image.production.yml
@@ -1,4 +1,4 @@
-name: Production Docker Image CI/CD
+name: Production
 
 on:
   push:
@@ -14,6 +14,7 @@ jobs:
         run: |
           python3 set_example_env.py
           pip3 install -r requirements.txt
+          python3 manage.py collectstatic
           python3 manage.py test
 
   build:
@@ -40,4 +41,14 @@ jobs:
           docker login -u gitlab-ci-token -p ${{ secrets.GITLAB_TOKEN }} ${{ secrets.GITLAB_URL }}
           docker pull ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
           docker rm -f foodate || true
-          docker run -d -p 445:445 --name foodate --env DEBUG=${{ secrets.DEBUG }} --env SECRET_KEY='${{ secrets.DJANGO_SECRET_KEY }}' --env HOST=${{ secrets.HOST }} --env SCHEME=${{ secrets.SCHEME }} --env EMAIL_HOST_USER=${{ secrets.EMAIL_HOST_USER }} --env EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }} -v /home/vasil1y/apps/foodate/db.sqlite3:/code/db.sqlite3 -v /home/vasil1y/apps/foodate/uploads:/code/uploads ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
+          docker run -d -p 445:445 --name foodate \
+          --env DEBUG=${{ secrets.DEBUG }} \
+          --env SECRET_KEY='${{ secrets.DJANGO_SECRET_KEY }}' \
+          --env HOST=${{ secrets.HOST }} \
+          --env SCHEME=${{ secrets.SCHEME }} \
+          --env STATIC_ROOT=${{ secrets.STATIC_ROOT }} \
+          --env MEDIA_ROOT=${{ secrets.MEDIA_ROOT }} \
+          --env DB_ROOT=${{ secrets.DB_ROOT }} \
+          --env EMAIL_HOST_USER=${{ secrets.EMAIL_HOST_USER }} \
+          --env EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }} \
+          ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
