--- a/.github/workflows/docker-image.production.yml
+++ b/.github/workflows/docker-image.production.yml
@@ -41,14 +41,14 @@ jobs:
           docker login -u gitlab-ci-token -p ${{ secrets.GITLAB_TOKEN }} ${{ secrets.GITLAB_URL }}
           docker pull ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
           docker rm -f foodate || true
-          docker run -d -p 445:445 --name foodate \
+          docker run -d -p 8000:8000 --name foodate \
           --env DEBUG=${{ secrets.DEBUG }} \
           --env SECRET_KEY='${{ secrets.DJANGO_SECRET_KEY }}' \
           --env HOST=${{ secrets.HOST }} \
           --env SCHEME=${{ secrets.SCHEME }} \
-          --env STATIC_ROOT=${{ secrets.STATIC_ROOT }} \
-          --env MEDIA_ROOT=${{ secrets.MEDIA_ROOT }} \
-          --env DB_ROOT=${{ secrets.DB_ROOT }} \
           --env EMAIL_HOST_USER=${{ secrets.EMAIL_HOST_USER }} \
           --env EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }} \
+          -v ${{ secrets.DB_ROOT }}:/code/db.sqlite3 \
+          -v ${{ secrets.STATIC_ROOT }}:/code/www/static \
+          -v ${{ secrets.MEDIA_ROOT }}:/code/www/uploads \
           ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
