--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,7 @@ jobs:
         python3 set_example_env.py
         pip3 install -r requirements.txt
         python3 manage.py collectstatic
+        python3 manage.py migrate
         python3 manage.py test
 
   build:
