--- a/.github/workflows/docker-image.production.yml
+++ b/.github/workflows/docker-image.production.yml
@@ -15,6 +15,7 @@ jobs:
           python3 set_example_env.py
           pip3 install -r requirements.txt
           python3 manage.py collectstatic
+          python3 manage.py migrate
           python3 manage.py test
 
   build:
