--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -46,13 +46,8 @@ jobs:
           docker pull ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
           docker rm -f dev.foodate || true
           docker run -d -p 8001:8001 --name dev.foodate \
-          --env DEBUG=${{ secrets.DEBUG }} \
-          --env SECRET_KEY='${{ secrets.DJANGO_SECRET_KEY }}' \
-          --env HOST=${{ secrets.HOST }} \
-          --env SCHEME=${{ secrets.SCHEME }} \
-          --env EMAIL_HOST_USER=${{ secrets.EMAIL_HOST_USER }} \
-          --env EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }} \
           -v ${{ secrets.DB_ROOT }}:/code/db.sqlite3 \
           -v ${{ secrets.STATIC_ROOT }}:/code/www/static \
           -v ${{ secrets.MEDIA_ROOT }}:/code/www/uploads \
+          -v ${{ secrets.ENV_ROOT }}:/code/.env \
           ${{ secrets.GITLAB_IMAGE }}:$GITHUB_RUN_ID
